[gd_scene load_steps=3 format=3 uid="uid://challspine001"]

[ext_resource type="Script" path="res://Scripts/Challenge/challenge_spine.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://dq7mvmshxtrbe" path="res://Resources/Art/Background/POST_IT_NOTE.png" id="2_texture"]

[node name="ChallengeSpine" type="Control"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 120.0
mouse_filter = 1
script = ExtResource("1_script")
spine_texture = ExtResource("2_texture")

[node name="SpineRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_texture")
stretch_mode = 5

[node name="GoalLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.15, 0.15, 0.15, 1)
theme_override_font_sizes/font_size = 14
text = "Goal"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DiceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 10
text = "d6"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
